# rocker

./: .gitignore  CHANGELOG.md  Cargo.toml  FUTURE.md  HANDOFF.md  README.md
.github/workflows/: build.yml  ci.yml
data/: album_titles.txt  band_member_names.txt  band_name_patterns.txt  band_names.txt  city_names.txt  incidents.json  markets.json  record_labels.json  song_adjectives.txt  song_emotions.txt  song_nouns.txt  song_places.txt  song_title_patterns.txt  song_verbs.txt  timeline.json  venue_names.txt
docs/: DESIGN-v0.6-life-cycle.md  DESIGN-v0.7-money-cycle.md
docs/archive/: HANDOFF-v0.5-cycle.md  HANDOFF-v0.5.1-structure.md  HANDOFF-v0.6-cycle.md
src/: data_loader.rs  main.rs
src/data/: data_loader.rs  mod.rs
src/game/: actions.rs  band.rs  constants.rs  core.rs  economy.rs  events.rs  events_apply.rs  genre.rs  label_moves.rs  lifestyle.rs  mod.rs  music.rs  new_game_logic.rs  new_world_logic.rs  player.rs  rng.rs  shows.rs  sim.rs  timeline.rs  turn.rs  world.rs
src/game/actions/: business.rs  live.rs  mod.rs  rest.rs  studio.rs
src/game/tests/: certifications.rs  deal_lifecycle.rs  deals.rs  determinism.rs  fame.rs  history.rs  incidents.rs  label_moves.rs  lifestyle.rs  mod.rs  recoupment.rs  releases.rs  repress.rs  save_compat.rs  shows.rs  smoke.rs  studio.rs  support.rs
src/game/world/: charts.rs  deals.rs  mod.rs  regions.rs  scene.rs  venues.rs
src/ui/: app.rs  mod.rs  new_terminal_logic.rs  render.rs  terminal.rs
src/ui/input/: deals.rs  file.rs  lifestyle.rs  main.rs  marketing.rs  mod.rs  setup.rs  (+1 more)
tests/fixtures/: pre-0.5.sav
(+14 files in other folders)
