[package]
name = "rocker"
version = "0.2.0"
edition = "2021"
description = "A rock star management simulation game starting in 1970"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
keywords = ["game", "music", "simulation", "rock", "1970s"]

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "rocker"
path = "src/main.rs"
