[package]
name = "rocker"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
description = "A rock star management simulation game starting in 1970"
authors = ["Narayan SS <nrynss@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
keywords = ["game", "music", "simulation", "rock", "1970s"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
ratatui = "0.30.2"
tracery = { version = "0.2.1", default-features = false }

[[bin]]
name = "rocker"
path = "src/main.rs"
